# libbash

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  autogen.sh  configure.ac
bashast/: bashast.g  bashast_arith.g  bashast_cond.g  bashast_param.g
bashast/features_script/: features.sh
bashast/gunit/: arith.gunit  arith_main.gunit  array.gunit  assoc_array.gunit  brace.gunit  command_sub.gunit  comment.gunit  compound.gunit  cond.gunit  cond_main.gunit  continued_lines.gunit  expansions.gunit  fname.gunit  function.gunit  list.gunit  param.gunit  param_main.gunit  pipeline.gunit  proc_sub.gunit  redir.gunit  runtests.sh  simp_command.gunit  simp_prog.gunit
bashast/repoman_tests/: quotedvars_test.g
coding_standard/: coding_standard.tex
gpgkey/: gpgkey_info  powerofazure_pub.gpgkey
src/: bashast.h  builtin_map.cpp  builtin_map.h  builtins.h  cppbash.cpp  cppbash.h  cppbash_builtin.cpp  cppbash_builtin.h  symbol_table.h
src/builtins/: builtins.h  echo_builtin.cpp  echo_builtin.h
src/builtins/tests/: Makefile  README  echo_tests.cpp  run_tests.cpp
src/examples/: var_ref.cpp
src/st_tests/: test_symbol_table.cpp
tests/: echotest.cpp  input  output_tree.cpp
